feat: add DangerSense ability & mastery command